--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,1 +1,16 @@
-{{!-- // Setup the main.handlebars file so it's able to be used by Handlebars --}}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/public/css/burger_style.css" type="text/css" />
+    <title>EAT-DA-BURGER</title>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/public/js/burgers.js"></script>
+</head>
+
+<body>
+    {{{ body }}}
+</body>
+
+</html>
